--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,8 @@ body::before{
 }
 
 h1{
-    font-weight: 400;
-    line-height: 1.2;
+    font-weight: 900;
+    line-height: 1.5;
 }
 
 
@@ -55,6 +55,10 @@ p{
 h1,
 p{
     margin-top: 0;
+    margin-bottom: 1.5rem;
+}
+
+.adjust-text{
     margin-bottom: 0.5rem;
 }
 
